<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="410dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_muni" />

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            tools:text="@string/strTvInput"/>

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/strEvHint"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/strTvWarning"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/greenMuni"
            android:text="@string/strBtnSave" />

        <Button
            android:id="@+id/btnNewActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/greenMuni"
            android:text="@string/strBtnNewActivity" />
    </LinearLayout>

</layout>